test/Fail/NoTerminationCheck1.agda
-- 2012-03-08 Andreas
module NoTerminationCheck1 where

{-# NO_TERMINATION_CHECK #-}

-- error: this pragma has been removed
